--- a/todomvc.html
+++ b/todomvc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>TODOMVC</title>
     <link rel="stylesheet" href="css/todomvc.css" />
-    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
   </head>
   <body ng-app="myApp" ng-controller="myCtrl">
     <h1 class="h-title">todos</h1>
@@ -38,6 +38,6 @@
       </ul>
     </div>
   </body>
-  <script src="http://apps.bdimg.com/libs/angular.js/1.4.6/angular.min.js"></script>
+  <script src="js/angular.min.js"></script>
   <script src="js/todomvc.js"></script>
 </html>
